# rust_operating_system

./: Cargo.toml
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  test.rs
src/test/: exit.rs  mod.rs  run.rs
src/vga/: mod.rs  print.rs  test.rs  writer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
