[package]
name = "operating_system"
version = "0.1.0"
edition = "2021"


[dependencies]
bootloader = "0.9.23"
#bootloader_api = "0.11.0"
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.6"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 #(0x10 << 1) | 1
test-timeout = 300 # timeout in seconds

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
